# Techniker_23-24_Kaffeeautomat

./: CMakeLists.txt  main.c
